--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,12 @@
 
     },
     "autoload": {
+       
         "psr-4": {
-            "App\\": "app/"
+            "App\\":"app/",
+            "Public\\":"public/",
+            "resource\\":"resource/",
+            "routes\\":"routes/"
         }
     }
 }
